Use Java 11